--- a/Front-End/src/assests/css/bodyHome.css
+++ b/Front-End/src/assests/css/bodyHome.css
@@ -1,10 +1,11 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    font-family: 'Roboto', sans-serif;
+    background-color: #f4f4f9;
     margin: 0;
     padding: 0;
+}
+
+.container {
     display: flex;
-    justify-content: center;
-    align-items: center;
     min-height: 100vh;
 }
