--- a/Front-End/src/assests/css/barra.css
+++ b/Front-End/src/assests/css/barra.css
@@ -9,6 +9,7 @@
     top: 0;
     left: 0;
     bottom: 0;
+    overflow-y: auto; /* Agrega una barra de desplazamiento vertical */
 }
 
 .logo img {
